# EchoType

./: .gitignore  README.md  package-lock.json  package.json
scripts/: local-transcribe.py  with-cargo-path.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
